# minesweeper

./: .gitignore  CMakeLists.txt
src/: Generator.cpp  Generator.h  Grid.h  MineGrid.cpp  MineGrid.h  SFMLWidget.cpp  SFMLWidget.h  Square.h  main.cpp
